An implementation of the pool that delegates most invocations to an event-loop bound pool